--- a/pages/learn/caos/02_08_distribuzione_di_poisson.html
+++ b/pages/learn/caos/02_08_distribuzione_di_poisson.html
@@ -111,7 +111,7 @@
             La funzione non ha limite superiore e la distribuzione è controllata dal parametro \(\lambda\).
             <br>
             <br>
-            La probabilità di avere l’intero \(k\) è data da: \(p {x = k} = e^(-\lambda) \frac{\lambda^k}{k!} \; x > 0\)
+            La probabilità di avere l’intero \(k\) è data da: \(p {x = k} = e^{-\lambda} \frac{\lambda^k}{k!} \; x > 0\)
             <br>
             <br>
             Il valor medio della distribuzione è \(\lambda\).
