--- a/pages/learn/caos/02_08_distribuzione_di_poisson.html
+++ b/pages/learn/caos/02_08_distribuzione_di_poisson.html
@@ -164,7 +164,7 @@
             <br>
             <br>
             La distribuzione di Poisson è legata al processo di Poisson.
-            Si applica a vari fenomeni di natura discreta (ovvero quelli che possono accadere 0,1,2,3,… volte durante un periodo di tempo o in una data area) ma con il vincolo che la probabilità rimanga costante nel tempo (o nello spazio in caso di
+            Si applica a vari fenomeni di natura discreta (ovvero quelli che possono accadere 0, 1, 2, 3,… volte durante un periodo di tempo o in una data area) ma con il vincolo che la probabilità rimanga costante nel tempo (o nello spazio in caso di
             area).
             <br>
             <br>
