--- a/pages/learn/caos/02_08_distribuzione_di_poisson.html
+++ b/pages/learn/caos/02_08_distribuzione_di_poisson.html
@@ -190,19 +190,19 @@
     </div>
   </section>
 
-    <!-- Image-->
-    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-12 col-lg-5">
-            <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/caos/38.webp" alt="www.gabrielavelitch.com">
-              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 38 <br> </p>
-            </div>
+  <!-- Image-->
+  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+    <div class="container-fluid">
+      <div class="row justify-content-center">
+        <div class="col-12 col-lg-5">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/39.webp" alt="www.gabrielavelitch.com">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 39 <br> </p>
           </div>
         </div>
       </div>
-    </section>
+    </div>
+  </section>
 
     <!-- Text-->
     <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -212,7 +212,7 @@
             <p class="mbr-text mbr-fonts-style display-7">
               La distribuzione è detta anche degli eventi rari.
               E’ stata usata da Xenakis per la distribuzione di altezze e durate nei suoi lavori.
-              Per Xenakis tale distribuzione descrive un andamento di molte “individualità” che però marciano verso un obiettivo, come succede per la folla durante una manifestazione. 
+              Per Xenakis tale distribuzione descrive un andamento di molte “individualità” che però marciano verso un obiettivo, come succede per la folla durante una manifestazione.
               Se un individuo intona uno slogan, questo può morire subito (se non viene recepito da un numero sufficiente di individui), oppure crescere fino a diventare collettivo.
             </p>
           </div>
@@ -220,27 +220,14 @@
       </div>
     </section>
 
-    <!-- Image-->
-    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-      <div class="container-fluid">
-        <div class="row justify-content-center">
-          <div class="col-12 col-lg-5">
-            <div class="image-wrapper">
-              <img src="https://www.gabrielavelitch.com/img/caos/39.webp" alt="www.gabrielavelitch.com">
-              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 39 <br> </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_07_distribuzione_esponenziale.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_09_distribuzione_gaussiana.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
