--- a/pages/learn/caos/02_09_distribuzione_gaussiana.html
+++ b/pages/learn/caos/02_09_distribuzione_gaussiana.html
@@ -109,13 +109,13 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            E’ la distribuzione tipica dei fenomeni aleatori. E’ caratterizzata da un valore medio m e dalla deviazione standard σ.
+            E’ la distribuzione tipica dei fenomeni aleatori. E’ caratterizzata da un valore medio m e dalla deviazione standard \(\sigma\).
             <br>
             <br>
-            E’ caratterizzata da un profilo a campana, il cui apice è in corrispondenza del valor medio e il cui valore è 0.399/σ. La larghezza della campana è data da σ.
+            E’ caratterizzata da un profilo a campana, il cui apice è in corrispondenza del valor medio e il cui valore è 0.399/σ. La larghezza della campana è data da \(\sigma\).
             <br>
             <br>
-            La maggior parte dei valori della variabile aleatoria x (il 99.74%) cadono nel caso dalla distribuzione gaussiana, nel range di: m±3σ.
+            La maggior parte dei valori della variabile aleatoria x (il 99.74%) cadono nel caso dalla distribuzione gaussiana, nel range di: \(m \pm 3 \sigma\).
             <br>
             <br>
             La gaussiana si ottiene con un semplice algoritmo, sommando un congruo numero di distribuzioni uniformi.
