--- a/pages/learn/caos/02_09_distribuzione_gaussiana.html
+++ b/pages/learn/caos/02_09_distribuzione_gaussiana.html
@@ -112,10 +112,10 @@
             E’ la distribuzione tipica dei fenomeni aleatori. E’ caratterizzata da un valore medio m e dalla deviazione standard \(\sigma\).
             <br>
             <br>
-            E’ caratterizzata da un profilo a campana, il cui apice è in corrispondenza del valor medio e il cui valore è 0.399/σ. La larghezza della campana è data da \(\sigma\).
+            E’ caratterizzata da un profilo a campana, il cui apice è in corrispondenza del valor medio e il cui valore è  \(0.399 / \sigma\). La larghezza della campana è data da \(\sigma\).
             <br>
             <br>
-            La maggior parte dei valori della variabile aleatoria x (il 99.74%) cadono nel caso dalla distribuzione gaussiana, nel range di: \(m \pm 3 \sigma\).
+            La maggior parte dei valori della variabile aleatoria \(x\) (il 99.74%) cadono nel caso dalla distribuzione gaussiana, nel range di: \(m \pm 3 \sigma\).
             <br>
             <br>
             La gaussiana si ottiene con un semplice algoritmo, sommando un congruo numero di distribuzioni uniformi.
