--- a/pages/learn/caos/02_09_distribuzione_gaussiana.html
+++ b/pages/learn/caos/02_09_distribuzione_gaussiana.html
@@ -121,7 +121,7 @@
             La gaussiana si ottiene con un semplice algoritmo, sommando un congruo numero di distribuzioni uniformi.
             Si può approssimare bene utilizzando almeno 12 distribuzioni uniformi.
 $$N = 12;$$
-$$\text{scala} = \frac{1}{\rad \frac{N}{12}}$$
+$$\text{scala} = \frac{1}{\sqrt \frac{N}{12}}$$
 
           </p>
         </div>
