--- a/pages/learn/caos/02_10_mapping.html
+++ b/pages/learn/caos/02_10_mapping.html
@@ -23,7 +23,7 @@
   <meta name="description" content="">
 
 
-  <title>Distribuzione Gaussiana</title>
+  <title>Mapping</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -94,7 +94,7 @@
       <div class="row justify-content-center">
         <div class="title col-md-12 col-lg-10">
           <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Distribuzione Gaussiana</strong></h4>
+          <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Mapping</strong></h4>
         </div>
       </div>
     </div>
@@ -102,54 +102,45 @@
 
 
   <!-- Text-->
-
-
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            E’ la distribuzione tipica dei fenomeni aleatori. E’ caratterizzata da un valore medio m e dalla deviazione standard \(\sigma\).
+            Il mapping permette di riconfigurare una funzione definita in un intervallo (a, b) in una nuova funzione analoga alla precedente,
+            in modo che i valori che la nuova funzione assume possano estendersi (o contrarsi) ad un nuovo intervallo di valori (c, d).
             <br>
             <br>
-            E’ caratterizzata da un profilo a campana, il cui apice è in corrispondenza del valor medio e il cui valore è \(0.399 / \sigma\). La larghezza della campana è data da \(\sigma\).
+            In altre parole se i valori della variabile casuale x sono compresi tra a e b con il mapping si ottiene una nuova variabile casuale y con comportamento analogo ad x ma con i valori compresi tra c e d.
             <br>
             <br>
-            La maggior parte dei valori della variabile aleatoria \(x\) (il 99.74%) cadono nel caso dalla distribuzione gaussiana, nel range di: \(m \pm 3 \sigma\).
+            Il mapping può essere lineare oppure seguire funzioni non lineari (logaritmo, esponenziale, ecc).
             <br>
             <br>
-            La gaussiana si ottiene con un semplice algoritmo, sommando un congruo numero di distribuzioni uniformi.
-            Si può approssimare bene utilizzando almeno 12 distribuzioni uniformi.
-            $$N = 12;$$
-            $$\text{scala} = \frac{1}{\sqrt \frac{N}{12}}$$
-            $$\{gauss} = m + \sigma \cdot \{scala} \cdot (\displaystyle\sum_{k=1}^{N} \text{random}(1) - \frac{N}{2})$$
+            Mapping lineare: \(y = \frac{d - c}{b - a} (x - a) + c\)
+            <br>
+            <br>
+            Si ottiene interpolando i valori con una retta \(y = mx + n\).
+            <br>
+            <br>
+            Ex: ricavare i valori relativi al lancio di un dado utilizzando la distribuzione uniforme \(x = \text{rnd} (1)\)
+            $$x = \text{rnd} (1)$$
+            $$y = \text{int} (6 \cdot x) + 1$$
           </p>
         </div>
       </div>
     </div>
   </section>
 
-  <!-- Image-->
-  <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
-    <div class="container-fluid">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-5">
-          <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/caos/40.webp" alt="www.gabrielavelitch.com">
-            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 40 <br> </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
+
 
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_08_distribuzione_di_poisson.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_10_mapping.htm">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_09_distribuzione_gaussiana.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
