--- a/pages/learn/caos/02_11_autocorrelazione.html
+++ b/pages/learn/caos/02_11_autocorrelazione.html
@@ -19,7 +19,7 @@
   <meta name="description" content="">
 
 
-  <title>test</title>
+  <title>Autocorrelazione</title>
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="https://www.gabrielavelitch.com/assets/bootstrap/css/bootstrap.min.css">
@@ -81,7 +81,7 @@
         <div class="row justify-content-center">
             <div class="title col-md-12 col-lg-10">
                 <h3 class="mbr-section-title mbr-fonts-style align-center mb-4 display-5">Caos</h3>
-                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>test</strong></h4>
+                <h4 class="mbr-section-subtitle align-center mbr-fonts-style mb-4 display-2"><strong>Autocorrelazione</strong></h4>
             </div>
         </div>
     </div>
@@ -94,6 +94,14 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
+                    L’autocorrelazione Rx(τ) fornisce una misura di quanto un segnale si assomigli, si correli, abbia in
+                    qualche modo proprietà comuni con se stesso ritardato di un tempo t. In altre parole
+                    l’autocorrelazione segnala se una sequenza o un segnale contengono dei pattern che si ripetono.
+
+                    L’autocorrelazione viene calcolata come il valor medio del prodotto di un valore xk della variabile
+                    aleatoria con tutti i valori assunti dalla variabile aleatoria stessa. Se i valori non coincidono allora non ci
+                    sarà autocorrelazione poiché il valor medio del prodotto tenderà a zero
+
 
                   </p>
                 </div>
@@ -101,14 +109,33 @@
         </div>
     </section>
 
-
+  <!-- Text and Image-->
+    <section data-bs-version="5.1" class="image2 cid-tjiN3eekXe" id="image2-1">
+      <div class="container">
+          <div class="row align-items-center">
+              <div class="col-12 col-lg-4">
+                  <div class="image-wrapper">
+                      <img src="https://www.gabrielavelitch.com/img/caos/41.webp" alt="">
+                      <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig.41</p>
+                  </div>
+              </div>
+              <div class="col-12 col-lg">
+                  <div class="text-wrapper">
+                      <p class="mbr-text mbr-fonts-style display-7">
+                        Se il segnale varia in modo monotono, (lentamente nel tempo) allora x(t- τ) è simile a x(t) quindi il prodotto sarà diverso da zero (e positivo) e l’indice di correlazione sarà maggiore di zero.
+                        </p>
+                  </div>
+              </div>
+          </div>
+      </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_10_mapping.html">&lt; Previous</a>
                     <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
