--- a/pages/learn/caos/02_09_distribuzione_gaussiana.html
+++ b/pages/learn/caos/02_09_distribuzione_gaussiana.html
@@ -122,7 +122,7 @@
             Si può approssimare bene utilizzando almeno 12 distribuzioni uniformi.
             $$N = 12;$$
             $$\text{scala} = \frac{1}{\sqrt \frac{N}{12}}$$
-            $$\{gauss} = m + \sigma \cdot \{scala} \cdot (\displaystyle\sum_{k=1}^{N} \text{random}(1) - \frac{N}{2})$$
+            $$\text{gauss} = m + \sigma \cdot \{scala} \cdot (\displaystyle\sum_{k=1}^{N} \text{random}(1) - \frac{N}{2})$$
           </p>
         </div>
       </div>
