--- a/pages/learn/caos/02_09_distribuzione_gaussiana.html
+++ b/pages/learn/caos/02_09_distribuzione_gaussiana.html
@@ -149,7 +149,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_08_distribuzione_di_poisson.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_10_mapping.htm">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_10_mapping.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
