--- a/pages/learn/caos/02_10_mapping.html
+++ b/pages/learn/caos/02_10_mapping.html
@@ -117,7 +117,7 @@
             Il mapping può essere lineare oppure seguire funzioni non lineari (logaritmo, esponenziale, ecc).
             <br>
             <br>
-            Mapping lineare: \(y = \frac{d - c}{b - a} (x - a) + c\)
+            Mapping lineare: \(y = \frac{(d - c)}{(b - a)} (x - a) + c\)
             <br>
             <br>
             Si ottiene interpolando i valori con una retta \(y = mx + n\).
