--- a/pages/learn/caos/02_11_autocorrelazione.html
+++ b/pages/learn/caos/02_11_autocorrelazione.html
@@ -110,12 +110,11 @@
             L’autocorrelazione Rx(τ) fornisce una misura di quanto un segnale si assomigli, si correli, abbia in
             qualche modo proprietà comuni con se stesso ritardato di un tempo t. In altre parole
             l’autocorrelazione segnala se una sequenza o un segnale contengono dei pattern che si ripetono.
-
+            <br>
+            <br>
             L’autocorrelazione viene calcolata come il valor medio del prodotto di un valore xk della variabile
             aleatoria con tutti i valori assunti dalla variabile aleatoria stessa. Se i valori non coincidono allora non ci
-            sarà autocorrelazione poiché il valor medio del prodotto tenderà a zero
-
-
+            sarà autocorrelazione poiché il valor medio del prodotto tenderà a zero.
           </p>
         </div>
       </div>
