--- a/pages/learn/caos/02_11_autocorrelazione.html
+++ b/pages/learn/caos/02_11_autocorrelazione.html
@@ -163,6 +163,43 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            L’autocorrelazione ha molte applicazioni: ex riesce a ricavare un segnale nascosto dal rumore
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Text and Image-->
+  <section data-bs-version="5.1" class="image2 cid-tjiN3eekXe" id="image2-1">
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-12 col-lg-4">
+          <div class="image-wrapper">
+            <img src="https://www.gabrielavelitch.com/img/caos/43.webp" alt="">
+            <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig.43</p>
+          </div>
+        </div>
+        <div class="col-12 col-lg">
+          <div class="text-wrapper">
+            <p class="mbr-text mbr-fonts-style display-7">
+              Il segnale casuale di 100 campioni contiene anche una sinusoide.
+              <br>
+              <br>
+              La correlazione evidenzia la sinusoide nascosta (correlogramma).
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
