--- a/pages/learn/caos/02_11_autocorrelazione.html
+++ b/pages/learn/caos/02_11_autocorrelazione.html
@@ -180,7 +180,7 @@
   <section data-bs-version="5.1" class="image2 cid-tjiN3eekXe" id="image2-1">
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-12 col-lg-4">
+        <div class="col-md-12 col-lg-8">
           <div class="image-wrapper">
             <img src="https://www.gabrielavelitch.com/img/caos/43.webp" alt="">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig.43</p>
