--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -152,9 +152,13 @@
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_08_distribuzione_di_poisson.html" target="_blank"><b>02.08. Distribuzione di Poisson</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_09_distribuzione_gaussiana.html" target="_blank"><b>02.09. Distribuzione Gaussiana</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_10_mapping.html" target="_blank"><b>02.10. Mapping</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_11_autocorrelazione.html" target="_blank"><b>02.11. Autocorrelazione</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processi con Memoria</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Rumori Frazionari</b></a></li>
+                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_11_00_autocorrelazione.html" target="_blank"><b>02.11. Autocorrelazione</b></a></li>
+                <ul>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_11_01_00_processi_con_memoria.html" target="_blank"><b>02.11.01. Processi con Memoria</b></a></li>
+                  <ul>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_11_01_01_rumori_frazionari.html" target="_blank"><b>02.11.01.01. Rumori Frazionari</b></a></li>
+                  </ul>
+                </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Processo Markoviano</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Matrice di Probabilità</b></a></li>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_05_densità_di_probabilità.html" target="_blank"><b>02.06. Implementazione del Processo Markoviano</b></a></li>
