--- a/pages/learn/caos/02_11_00_autocorrelazione.html
+++ b/pages/learn/caos/02_11_00_autocorrelazione.html
@@ -200,6 +200,31 @@
     </div>
   </section>
 
+  <!-- Text-->
+  <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-12 col-lg-8">
+          <p class="mbr-text mbr-fonts-style display-7">
+            E’ possibile intendere l’autocorrelazione come un indice di “memoria” di un processo casuale. Se gli
+            stati immediatamente precedenti allo stato attuale influenzano tale stato (cioè il valore attuale è legato
+            ai valori precedenti per somiglianza numerica) allora l’autocorrelazione avrà un valore
+            significativamente diverso da zero e saremo in presenza di processi con memoria.
+            <br>
+            <br>
+            Mentre la densità di probabilità contiene l'informazione relativa alle variazioni d'ampiezza del
+            processo, (cioè relativa ai valori che assume la variabile casuale X), l'autocorrelazione contiene
+            l'informazione relativa alle variazioni della variabile casuale X sull'asse dei tempi (legata quindi
+            alla frequenza di ripetizione del fenomeno).
+            <br>
+            <br>
+            La trasformata inversa di uno spettro di densità rappresenta l'autocorrelazione del segnale.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
   <!-- Prev/Next-->
   <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
     <div class="container">
