--- a/pages/learn/caos/02_11_01_00_processi_con_memoria.html
+++ b/pages/learn/caos/02_11_01_00_processi_con_memoria.html
@@ -94,7 +94,16 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Sono processi basati su generatori casuali i cui valori successivi sono influenzati dai
+                    valori generati precedentemente. Con tale condizione si dice che il processo ha
+                    memoria.
+                    <br>
+                    <br>
+                    In base all’indice di autocorrelazione del segnale (somiglianza tra valori successivi),
+                    la memoria può essere a breve o a medio termine.
+                    <br>
+                    <br>
+                    Vengono descritti attraverso lo spettro di densità di probabilità. Fanno parte della famiglia dei rumori frazionari.
                   </p>
                 </div>
             </div>
@@ -108,8 +117,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_11_00_autocorrelazione.html">&lt; Previous</a>
+                    <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_11_01_01_rumori_frazionari.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
                     <br>
                     <br>
             </div>
