--- a/pages/learn/caos/02_11_01_01_rumori_frazionari.html
+++ b/pages/learn/caos/02_11_01_01_rumori_frazionari.html
@@ -107,13 +107,13 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-8">
           <p class="mbr-text mbr-fonts-style display-7">
-            Rumore bianco (rand) ha densità spettrale uniforme: \(\text{distribuzione} = \frac{1}{(f)^0\)
+            Rumore bianco (rand) ha densità spettrale uniforme: \(\text{distribuzione} = \frac{1}{(f)^0}\)
             <br>
             <br>
-            Rumore rosa ha densità spettrale che dimezza l’energia per ogni ottava (-3dB/ottava): \(\text{distribuzione} = \frac{1}{(f)^1\)
+            Rumore rosa ha densità spettrale che dimezza l’energia per ogni ottava (-3dB/ottava): \(\text{distribuzione} = \frac{1}{(f)^1}\)
             <br>
             <br>
-            Rumore brown (moto browniano) ha densità spettrale (-6dB/ottava) [processo markoviano non tempo variante]: \(\text{distribuzione} = \frac{1}{(f)^2\)
+            Rumore brown (moto browniano) ha densità spettrale (-6dB/ottava) [processo markoviano non tempo variante]: \(\text{distribuzione} = \frac{1}{(f)^2}\)
             <br>
             <br>
             Rumore blu ha densità spettrale che raddoppia l’energia per ogni ottava (3dB/ottava) [usato per il dithering]: \(\text{distribuzione} = (f)^1\)
