--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -160,12 +160,15 @@
                   </ul>
                 </ul>
                 <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_processo_markoviano.html" target="_blank"><b>02.12. Processo Markoviano</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_matrice_di_probabilità.html" target="_blank"><b>02.12. Matrice di Probabilità</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_implementazione_del_processo_markoviano.html" target="_blank"><b>02.12. Implementazione del Processo Markoviano</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_estensione_della_martrice_di_probabilità.html" target="_blank"><b>02.12. Estensione della Matrice di Probabilità</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_applicazione_del_procsso_markoviano_ai_parametri_di_una_composizione.html" target="_blank"><b>02.12. Applicazione del Processo Markoviano ai Parametri di una Composizione</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_matrici_di_markov_del_secondo_ordine.html" target="_blank"><b>02.12. Matrici di Markov del Secondo Ordine</b></a></li>
-                <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_matrici_di_markov_tempo_varianti.html" target="_blank"><b>02.12. Matrici di Markov Tempo-Varianti</b></a></li>
+                <ul>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_matrice_di_probabilità.html" target="_blank"><b>02.12. Matrice di Probabilità</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_implementazione_del_processo_markoviano.html" target="_blank"><b>02.12. Implementazione del Processo Markoviano</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_estensione_della_martrice_di_probabilità.html" target="_blank"><b>02.12. Estensione della Matrice di Probabilità</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_applicazione_del_procsso_markoviano_ai_parametri_di_una_composizione.html" target="_blank"><b>02.12. Applicazione del Processo Markoviano ai Parametri di una
+                        Composizione</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_matrici_di_markov_del_secondo_ordine.html" target="_blank"><b>02.12. Matrici di Markov del Secondo Ordine</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_00_matrici_di_markov_tempo_varianti.html" target="_blank"><b>02.12. Matrici di Markov Tempo-Varianti</b></a></li>
+                </ul>
               </ul>
               </p>
         </div>
