--- a/pages/learn/caos/02_12_00_processo_markoviano.html
+++ b/pages/learn/caos/02_12_00_processo_markoviano.html
@@ -113,7 +113,17 @@
             Un esempio tipico è quello del salire o scendere uno scalino in una rampa di scale (sistema) in base al lancio di una moneta: se si presenta “testa” si sale di un gradino; se si presente “croce” si scende di un gradino.
             <br>
             <br>
-            Giunti al termine della scala, le barriere poste agli estremi possono essere assorbenti, quindi ad ogni successivo lancio lo stato del sistema rimane inalterato, oppure riflettenti, con la generazione di stati differenti
+            Giunti al termine della scala, le barriere poste agli estremi possono essere assorbenti, quindi ad ogni successivo lancio lo stato del sistema rimane inalterato, oppure riflettenti, con la generazione di stati differenti.
+            <br>
+            <br>
+            Ogni stato del sistema può essere riconfigurato su una matrice, caratterizzata dall’avere righe e colonne che individuano gli n stati che caratterizzano il sistema
+            <br>
+            <br>
+            Sempre utilizzando l’esempio con 5 gradini si può annotare quante volte dopo uno stato si è presentato uno stato successivo.
+            <br>
+            <br>
+            Possiamo utilizzare la matrice di probabilità che normalizza ad 1 la somma di ogni singola riga, considerando che se si ha probabilità p di andare al gradino successivo della scala, si ha probabilità q=1-p di tornare indietro al gradino
+            precedente.
           </p>
         </div>
       </div>
@@ -127,8 +137,8 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
-          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+          <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_11_01_01_rumori_frazionari.html">&lt; Previous</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_01_matrice_di_probabilità.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
