--- a/pages/learn/caos/02_12_01_matrice_di_probabilità.html
+++ b/pages/learn/caos/02_12_01_matrice_di_probabilità.html
@@ -87,6 +87,19 @@
     </div>
 </section>
 
+<!-- Image-->
+<section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+  <div class="container-fluid">
+    <div class="row justify-content-center">
+      <div class="col-12 col-lg-5">
+        <div class="image-wrapper">
+          <img src="https://www.gabrielavelitch.com/img/caos/44.webp" alt="www.gabrielavelitch.com">
+          <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 44 <br> </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
   <!-- Text-->
   <section data-bs-version="5.1" class="content5 cid-sYxSPQpamM" id="content5-1d">
@@ -94,14 +107,35 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Questa matrice rappresenta per ogni gradino (segnati in rosso) la probabilità di
+                    raggiungere il nuovo scalino al successivo lancio della moneta. Se la moneta non è
+                    truccata, ci sarà probabilità 0.5 di avanzare e probabilità 0.5 di indietreggiare.
+                    <br>
+                    <br>
+                    Le barriere di questo sistema sono assorbenti: quando si giunge allo scalino 1 o allo
+                    scalino 5, il sistema non cambierà più il proprio stato.
+                    <br>
+                    <br>
+                    Le barriere di questo sistema sono riflettenti: quando si giunge allo scalino 1 il sistema forza ad assumere al valore successivo lo stato 2; analogamente si verifica per lo stato 5.
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/45.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 45 <br> </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
