--- a/pages/learn/caos/02_12_06_matrici_di_markov_tempo_varianti.html
+++ b/pages/learn/caos/02_12_06_matrici_di_markov_tempo_varianti.html
@@ -108,8 +108,8 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-md-12 col-lg-10">
-                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="">&lt; Previous</a>
-                    <a class="btn btn-primary display-4" href="">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_05_matrici_di_markov_del_secondo_ordine.html">&lt; Previous</a>
+                    </div>
                     <br>
                     <br>
             </div>
