--- a/pages/learn/caos/02_12_03_estensione_della_martrice_di_probabilità.html
+++ b/pages/learn/caos/02_12_03_estensione_della_martrice_di_probabilità.html
@@ -94,14 +94,35 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Negli esempi precedenti abbiamo descritto il Random walk, che implica che
+                    lo stato successivo raggiunto dal sistema sia adiacente (gradino successivo o
+                    precedente) rispetto a quello attuale.
+                    Una molecola di gas si muove nello spazio istante per istante in questo
+                    modo, non potendo saltare da un punto all’altro dello spazio.
+                    <br>
+                    <br>
+                    Per implementare un random walk tridimensionale saranno necessarie 3 matrici
+                    di probabilità rispettivamente per le tre dimensioni spaziali x,y,z. La traiettoria
+                    della particella sarà f(x,y,z,t)
                   </p>
                 </div>
             </div>
         </div>
     </section>
 
-
+    <!-- Image-->
+    <section data-bs-version="5.1" class="image3 cid-t1AvF6Newe" id="image3-2l">
+      <div class="container-fluid">
+        <div class="row justify-content-center">
+          <div class="col-12 col-lg-5">
+            <div class="image-wrapper">
+              <img src="https://www.gabrielavelitch.com/img/caos/48.webp" alt="www.gabrielavelitch.com">
+              <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 48 <br> </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
 <!-- Prev/Next-->
 <section data-bs-version="5.1" class="content12 cid-sZjcQYH0JS" id="content12-27">
