--- a/pages/learn/caos/02_12_04_applicazione_del_procsso_markoviano_ai_parametri_di_una_composizione.html
+++ b/pages/learn/caos/02_12_04_applicazione_del_procsso_markoviano_ai_parametri_di_una_composizione.html
@@ -94,7 +94,17 @@
           <div class="row justify-content-center">
               <div class="col-md-12 col-lg-8">
                   <p class="mbr-text mbr-fonts-style display-7">
-
+                    Nei differenti momenti evolutivi dei linguaggi musicali sono stati adottati dei criteri di
+                    gerarchizzazione più o meno marcata di alcuni parametri relativi sia per l’event rate
+                    che per il control rate (ed applicabile anche all’audio rate).
+                    <br>
+                    <br>
+                    Attraverso il processo markoviano è possibile attribuire dei “pesi” agli eventi complessi o
+                    ai parametri del suono (ampiezza, frequenza, componenti spettrali, durata, intensità, ecc).
+                    <br>
+                    <br>
+                    Un evento complesso può essere un raggruppamento (una o più misure, un gesto
+                    complesso, ecc).
                   </p>
                 </div>
             </div>
