--- a/pages/learn/caos/02_12_03_estensione_della_martrice_di_probabilità.html
+++ b/pages/learn/caos/02_12_03_estensione_della_martrice_di_probabilità.html
@@ -177,6 +177,13 @@
             <br>
             <br>
             Come si può osservare la diagonale principale ha tutti 0 ad eccezione del re (0.5) che subisce un peso maggiore (polarizzazione).
+            <br>
+            <br>
+            Per ricavare una matrice markoviana da un flusso di dati in ingresso, bisogna verificare le occorrenze (numero di volte in cui si presenta un evento frequenza]) e costruire successivamente la matrice delle probabilità dividendo in numero
+            di occorrenze per il numero totale di eventi.
+            <br>
+            <br>
+            Da sequenze MIDI si possono estrarre le occorrenze e la matrice di probabilità ed in tal caso è possibile iniziare ad effettuare una analisi delle occorrenze (altezze e durate) al fine di una ri-produzione stilistica.
           </p>
         </div>
       </div>
