--- a/pages/learn/caos/02_12_02_implementazione_del_processo_markoviano.html
+++ b/pages/learn/caos/02_12_02_implementazione_del_processo_markoviano.html
@@ -120,6 +120,7 @@
             <li>Questo accade per un determinato indice di casella. Questo indice individua la
               nuova riga, dalla quale ripartire per la scelta del prossimo stato del sistema.</li>
           </ul>
+          <h3>Codice in Python</h3>
           </p>
         </div>
       </div>
@@ -146,7 +147,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/caos/47.webp" alt="www.gabrielavelitch.com">
+            <img src="https://www.gabrielavelitch.com/img/caos/47webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 47 <br> </p>
           </div>
         </div>
