--- a/pages/learn/caos.html
+++ b/pages/learn/caos.html
@@ -163,11 +163,15 @@
                 <ul>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_01_matrice_di_probabilità.html" target="_blank"><b>02.12.01. Matrice di Probabilità</b></a></li>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_02_implementazione_del_processo_markoviano.html" target="_blank"><b>02.12.02. Implementazione del Processo Markoviano</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_03_estensione_della_martrice_di_probabilità.html" target="_blank"><b>02.12.03. Estensione della Matrice di Probabilità</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_03_00_estensione_della_martrice_di_probabilità.html" target="_blank"><b>02.12.03. Estensione della Matrice di Probabilità</b></a></li>
+                  <ul>
+                    <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_03_01_ordine_delle_matrici_di_markov.html" target="_blank"><b>02.12.03.01. Ordine delle Matrici di Markov</b></a></li>
+                  </ul>
                   <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_04_applicazione_del_processo_markoviano_ai_parametri_di_una_composizione.html" target="_blank"><b>02.12.04. Applicazione del Processo Markoviano ai Parametri di una
                         Composizione</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_05_matrici_di_markov_del_secondo_ordine.html" target="_blank"><b>02.12.05. Matrici di Markov del Secondo Ordine</b></a></li>
-                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_06_matrici_di_markov_tempo_varianti.html" target="_blank"><b>02.12.06. Matrici di Markov Tempo-Varianti</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_05_esempio.html" target="_blank"><b>02.12.05. Esempio</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_06_matrici_di_markov_del_secondo_ordine.html" target="_blank"><b>02.12.06. Matrici di Markov del Secondo Ordine</b></a></li>
+                  <li><a href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_07_matrici_di_markov_tempo_varianti.html" target="_blank"><b>02.12.07. Matrici di Markov Tempo-Varianti</b></a></li>
                 </ul>
               </ul>
               </p>
