--- a/pages/learn/caos/02_12_02_implementazione_del_processo_markoviano.html
+++ b/pages/learn/caos/02_12_02_implementazione_del_processo_markoviano.html
@@ -147,7 +147,7 @@
       <div class="row justify-content-center">
         <div class="col-12 col-lg-5">
           <div class="image-wrapper">
-            <img src="https://www.gabrielavelitch.com/img/caos/47webp" alt="www.gabrielavelitch.com">
+            <img src="https://www.gabrielavelitch.com/img/caos/47.webp" alt="www.gabrielavelitch.com">
             <p class="mbr-description mbr-fonts-style mt-2 align-center display-4">fig. 47 <br> </p>
           </div>
         </div>
@@ -161,7 +161,7 @@
       <div class="row justify-content-center">
         <div class="col-md-12 col-lg-10">
           <div class="mbr-section-btn align-center"><a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_01_matrice_di_probabilità.html">&lt; Previous</a>
-            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_03_estensione_della_martrice_di_probabilità.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
+            <a class="btn btn-primary display-4" href="https://www.gabrielavelitch.com/pages/learn/caos/02_12_03_00_estensione_della_martrice_di_probabilità.html">&nbsp; &nbsp; Next &gt;&nbsp; &nbsp;</a>
           </div>
           <br>
           <br>
